src/objects/Financial_Journal_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Chit_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chit Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insert_Index__c</fullName>
        <label>Insert Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Entry_Name__c</fullName>
        <label>Recurring Entry Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Journal_Frequency__c</fullName>
        <label>Recurring Journal Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Journal Entry</label>
    <nameField>
        <displayFormat>FJE-{00000000}</displayFormat>
        <label>Financial Journal Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>